<resources>
    <string name="app_name">VarensTest</string>
    <string name="menu">Menu</string>
    <string name="total_amount">123.342,62</string>
    <string name="usd">USD</string>
    <string name="profit_amount">$120.234,21</string>
    <string name="percentage">+8,1%</string>
    <string name="btc">BTC</string>
    <string name="btc_percentage">-1.32%</string>
    <string name="change">Change</string>
    <string name="time_24h">24H</string>
    <string name="time_1w">1W</string>
    <string name="time_1m">1M</string>
    <string name="time_1y">1Y</string>
    <string name="all">All</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="about">About</string>
    <string name="random_long_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mattis posuere non tellus dictum at. Integer eget sed amet nisi, elit odio.</string>
    <string name="market_stats">Market Stats</string>
    <string name="market_cap_icon">Market cap icon</string>
    <string name="market_cap">Market Cap</string>
    <string name="market_cap_number">41,228.00 BTC</string>
    <string name="volume_icon">Volume icon</string>
    <string name="volume">Volume (24 h)</string>
    <string name="volume_amount">$12,999.00</string>
    <string name="available_supply">Available Supply</string>
    <string name="available_supply_number">9,771.64</string>
    <string name="trading_activity">Trading Activity</string>
    <string name="trading_activity_number">15% sell 85% buy</string>
    <string name="settings">Settings</string>
    <string name="btc_line_chart">BTC line chart</string>
    <string name="btc_icon">BTC icon</string>
    <string name="home">Home</string>
    <string name="status">Status</string>
    <string name="dot">●</string>
    <string name="exchange_amount">$24,150.17</string>
    <string name="amount_btc">2.73 BTC</string>
    <string name="coin_icon">Coin icon</string>
    <string name="coin_line_chart">Coin line chart</string>
    <string name="close">Close</string>
    <string name="convert_to">Convert to</string>
</resources>